Implement box-sizing polyfill.

--- a/sass/partials/_reset.sass
+++ b/sass/partials/_reset.sass
@@ -1,3 +1,7 @@
+*
+  +box-sizing(border-box)
+  *behavior: url("http://themery/sites/all/themes/base/lib/box-sizing/boxsizing.htc")
+
 /* Adapted from: normalize.css 2011-09-22 - http://github.com/necolas/normalize.css */
 
 // HTML5
@@ -271,9 +275,6 @@ input[disabled], select[disabled], textarea[disabled], button[disabled],
 input[disabled] + label
   cursor: not-allowed
 
-
-*
-  +box-sizing(border-box)
 
 // Drupal
 //------------------------------------------------------------------------------
