--- a/css/global.css
+++ b/css/global.css
@@ -2,6 +2,14 @@
   background: url('../img/icon-s895b624d63.png') no-repeat;
 }
 
+* {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  box-sizing: border-box;
+  *behavior: url("http://themery/sites/all/themes/base/lib/box-sizing/boxsizing.htc");
+}
+
 /* Adapted from: normalize.css 2011-09-22 - http://github.com/necolas/normalize.css */
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary {
   display: block;
@@ -236,13 +244,6 @@ textarea {
 input[disabled], select[disabled], textarea[disabled], button[disabled],
 input[disabled] + label {
   cursor: not-allowed;
-}
-
-* {
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  -ms-box-sizing: border-box;
-  box-sizing: border-box;
 }
 
 #autocomplete {
