--- a/sass/partials/_layout.sass
+++ b/sass/partials/_layout.sass
@@ -1,42 +1,43 @@
-.container
-  +container
-
-.one-sidebar
-  .column-first,
-  .column-second
-    +columns(3)
-  .column-main
-    +columns(9)
-
-.sidebar-first
-  .column-first
-    +alpha
-  .column-main
-    +omega
-
-.sidebar-second
-  .column-second
-    +omega
-  .column-main
-    +alpha
-
-.two-sidebars
-  .column-first
-    +columns(3)
-    +pull(6)
-    +alpha
-  .column-main
-    +columns(6)
-    +push(3)
-  .column-second
-    +columns(3)
-    +omega
-
-.no-sidebars
-  .column-main
+@media screen and (min-device-width: 768px)
+  .container
     +container
-  .wrap
-    +full
+  
+  .one-sidebar
+    .column-first,
+    .column-second
+      +columns(3)
+    .column-main
+      +columns(9)
+  
+  .sidebar-first
+    .column-first
+      +alpha
+    .column-main
+      +omega
+  
+  .sidebar-second
+    .column-second
+      +omega
+    .column-main
+      +alpha
+  
+  .two-sidebars
+    .column-first
+      +columns(3)
+      +pull(6)
+      +alpha
+    .column-main
+      +columns(6)
+      +push(3)
+    .column-second
+      +columns(3)
+      +omega
+  
+  .no-sidebars
+    .column-main
+      +container
+    .wrap
+      +full
 
 // Adjustments for mobile.
 @media screen and (min-width: 320px) and (max-width: 480px)
