--- a/sass/base/_pagers.sass
+++ b/sass/base/_pagers.sass
@@ -6,7 +6,7 @@ ul.pager
   padding-left: 0
   +clearfix
 
-ul.pager
+.pager
   li
     border: solid 1px #eee
     border-left-width: 0
@@ -16,7 +16,7 @@ ul.pager
     padding: 0
     &.first
       border-left-width: 1px
-  
+
   a, .pager-current, .pager-ellipsis
     padding: 0 12px
   a
