--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -1,11 +1,11 @@
-@import partials/base
-@import partials/layout
+@import base
+@import base/layout
 
-@import partials/forms
-@import partials/messages
-@import partials/tabs
-@import partials/pagers
-@import partials/search
+@import base/forms
+@import base/messages
+@import base/tabs
+@import base/pagers
+@import base/search
 
 
 // Font Size Reference (16px base / 100%)
