--- a/sass/_base.sass
+++ b/sass/_base.sass
@@ -2,15 +2,18 @@
 //------------------------------------------------------------------------------
 
 // Compass settings.
-$icon-spacing: 300px
-$experimental-support-for-khtml: false
+$icon-spacing: 300px !default
+$experimental-support-for-khtml: false !default
 
 // Colors
-$link: #4FB1D6
+$link: #4FB1D6 !default
 $hover: darken($link, 10%)
 $active: lighten($link, 10%)
 $visited: lighten($link, 5%)
 $focus: darken($link, 10%)
+
+// @todo Add colors for system messages.
+// @todo Add colors for default shadings/borders.
 
 // Grid
 $total-cols: 12
@@ -19,8 +22,11 @@ $gutter-width: 20px
 $side-gutter-width: 20px
 $show-grid-backgrounds: true
 
+
 // Compass
+// @see http://compass-style.org
 //------------------------------------------------------------------------------
+
 @import compass/utilities
 @import compass/reset/utilities
 @import compass/typography/vertical_rhythm
@@ -29,10 +35,14 @@ $show-grid-backgrounds: true
 
 
 // Susy
+// @see http://susy.oddbird.net/
 //------------------------------------------------------------------------------
+
 @import susy
 
 
 // Shared Mixins/Functions
+// These are all available via subthemes. See README.
 //------------------------------------------------------------------------------
-@import partials/utility
+
+@import base/utility
