--- a/sass/base/_messages.sass
+++ b/sass/base/_messages.sass
@@ -1,5 +1,5 @@
 .messages
-  +pie-clearfix
+  @extend .pie-clearfix
   background-color: #bedb82
   line-height: 1.6
   border-bottom: solid 1px rgba(137, 179, 51, 0.8)
