--- a/sass/base/_jquery-ui.core.sass
+++ b/sass/base/_jquery-ui.core.sass
@@ -12,10 +12,10 @@
 //------------------------------------------------------------------------------
 
 .ui-helper-hidden
-  @extend .hidden
+  +hidden
 
 .ui-helper-hidden-accessible
-  @extend .visuallyhidden
+  +visually-hidden
 
 .ui-helper-reset
   +reset-box-model
@@ -26,7 +26,7 @@
   text-decoration: none
 
 .ui-helper-clearfix
-  @extend .pie-clearfix
+  +pie-clearfix
 
 .ui-helper-zfix
   width: 100%
