--- a/sass/base/_search.sass
+++ b/sass/base/_search.sass
@@ -1,7 +1,7 @@
 .block-search, .search-form
   text-align: center
   .container-inline
-    @extend .pie-clearfix
+    +pie-clearfix
     +inline-block
     position: relative
     width: 100%
