--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -8,35 +8,6 @@
 @import base/search
 
 
-// Font Size Reference (16px base / 100%)
-//------------------------------------------------------------------------------
-
-//     1px = 0.063em         26px = 1.625em          51px = 3.188em
-//     2px = 0.125em         27px = 1.688em          52px = 3.250em
-//     3px = 0.188em         28px = 1.750em          53px = 3.313em
-//     4px = 0.250em         29px = 1.813em          54px = 3.375em
-//     5px = 0.313em         30px = 1.875em          55px = 3.438em
-//     6px = 0.375em         31px = 1.938em          56px = 3.500em
-//     7px = 0.438em         32px = 2.000em          57px = 3.563em
-//     8px = 0.500em         33px = 2.063em          58px = 3.625em
-//     9px = 0.563em         34px = 2.125em          59px = 3.688em
-//    10px = 0.625em         35px = 2.188em          60px = 3.750em
-//    11px = 0.688em         36px = 2.250em          61px = 3.813em
-//    12px = 0.750em         37px = 2.313em          62px = 3.875em
-//    13px = 0.813em         38px = 2.375em          63px = 3.938em
-//    14px = 0.875em         39px = 2.438em          64px = 4.000em
-//    15px = 0.938em         40px = 2.500em          65px = 4.063em
-//    16px = 1.000em         41px = 2.563em          66px = 4.125em
-//    17px = 1.063em         42px = 2.625em          67px = 4.188em
-//    18px = 1.125em         43px = 2.688em          68px = 4.250em
-//    19px = 1.188em         44px = 2.750em          69px = 4.313em
-//    20px = 1.250em         45px = 2.813em          70px = 4.375em
-//    21px = 1.313em         46px = 2.875em          71px = 4.438em
-//    22px = 1.375em         47px = 2.938em          72px = 4.500em
-//    23px = 1.438em         48px = 3.000em          73px = 4.563em
-//    24px = 1.500em         49px = 3.063em          74px = 4.625em
-//    25px = 1.563em         50px = 3.125em          75px = 4.688em
-
 // General padding
 //---------------------------------------------------------------------------
 
@@ -53,34 +24,8 @@ pre, code, kbd, samp
   font-size: 0.875em
 
 a
-  +link-colors($link, $hover, $active, $visited, $focus)
+  +link-colors($link, $hover, $active)
 
-ul
-  +pie-clearfix
-
-.icon
-  +hide
-
-.branding
-  +columns(6)
-  +alpha
-
-// Content
-//---------------------------------------------------------------------------
-
-.submitted
-  color: #777
-  margin: 1em 0
-
-article
-  margin: 0 0 40px 0
-
-p
-  margin: 1.25em 0
-  &:first-child
-    margin-top: 0
-  &:last-child
-    margin-bottom: 0
 
 
 // Tables
@@ -93,8 +38,10 @@ table, td, th
 thead
   background-color: #f5f5f5
 td, th
-  padding: 6px
   border-width: 0 1px 1px 0
+  padding: 6px
+  vertical-align: top
+  text-align: left
 th
   border-color: #ddd
 td
@@ -121,25 +68,34 @@ h5, h6
   font-size: 1em  // 16px
 
 
-// Navigation
-//------------------------------------------------------------------------------
-.main-menu
-  margin: 1em 0
-  text-align: center
-  ul
-    +inline-block-list(1em)
-
-
-// Breadcrumbs
-//------------------------------------------------------------------------------
-
-.breadcrumbs
-  margin: 1em 0
-
-
 // Lists
 //---------------------------------------------------------------------------
+
+ul, ol
+  +pie-clearfix
+  list-style: none
+  margin: 0
+  padding: 0
 
 dt
   font-size: 1.077em
   margin-top: 1em
+
+
+
+// Content
+//---------------------------------------------------------------------------
+
+.submitted
+  color: #777
+  margin: 1em 0
+
+article
+  margin: 0 0 40px 0
+
+p
+  margin: 1.25em 0
+  &:first-child
+    margin-top: 0
+  &:last-child
+    margin-bottom: 0
