Update Susy variables.

--- a/sass/_base.sass
+++ b/sass/_base.sass
@@ -16,11 +16,11 @@ $focus: darken($link, 10%)
 // @todo Add colors for default shadings/borders.
 
 // Grid
-$total-cols: 12
-$col-width: 60px
+$total-columns: 12
+$column-width: 60px
 $gutter-width: 20px
-$side-gutter-width: 20px
-$show-grid-backgrounds: true
+$grid-padding: 20px
+$show-grid-backgrounds: false
 
 
 // Compass
