Organize sprites better.

--- a/sass/base/_base.sass
+++ b/sass/base/_base.sass
@@ -2,7 +2,6 @@
 //------------------------------------------------------------------------------
 
 // Compass settings.
-$icon-spacing: 300px !default
 $experimental-support-for-khtml: false !default
 
 // Colors
@@ -33,7 +32,18 @@ $show-grid-backgrounds: false !default
 @import compass/css3
 
 // Note: At least one sprite image is needed in each theme in order to compile.
+
+// Specify spacing between icons.
+$icon-spacing: 50px
+$red-spacing: 50px
+$white-spacing: 50px
+
+// Include icon files.
 @import icon/*.png
+@import icon/white/*.png
+
+$icon: sprite-map("icon/*.png")
+$white: sprite-map("icon/white/*.png")
 
 
 // Susy
