--- a/sass/base/_tabs.sass
+++ b/sass/base/_tabs.sass
@@ -132,7 +132,7 @@ ul.action-links
     border-radius: 4px
   h2
     +hide-text
-    +icon-sprite(select, true)
+    +white-sprite(select, true)
     margin: 0
     padding: 0
     position: absolute
