Remove sprites for now.

--- a/sass/admin.sass
+++ b/sass/admin.sass
@@ -7,11 +7,11 @@
   +inline-block
   +hide-text
 
-.ascending
-  +icon-sprite(arrow-down, true)
+// .ascending
+//   +icon-sprite(arrow-down, true)
 
-.descending
-  +icon-sprite(arrow-up, true)
+// .descending
+//   +icon-sprite(arrow-up, true)
 
 th.active
   white-space: nowrap
@@ -30,13 +30,13 @@ a.tabledrag-handle
   &:hover
     text-decoration: none
   .handle
-    +icon-sprite(crosshair-gray, true)
+    // +icon-sprite(crosshair-gray, true)
     margin-top: 0
     tr.drag &
-      +icon-sprite(crosshair-blue)
+      // +icon-sprite(crosshair-blue)
 
 a.tabledrag-handle-hover .handle
-  +icon-sprite(crosshair)
+  // +icon-sprite(crosshair)
 
 tr.draggable td:first-child
   white-space: nowrap
