--- a/sass/base/_tabs.sass
+++ b/sass/base/_tabs.sass
@@ -132,7 +132,7 @@ ul.action-links
     border-radius: 4px
   h2
     +hide-text
-    +white-sprite(select, true)
+    background: inherit url('../img/icon/white/select.png') no-repeat 50% 50%
     margin: 0
     padding: 0
     position: absolute
