--- a/sass/base/_search.sass
+++ b/sass/base/_search.sass
@@ -12,7 +12,7 @@
     padding-right: 36px
     width: 100%
   input.form-submit
-    +icon-sprite(search, false, 8, 7)
+    background: inherit url('../img/icon/search.png') no-repeat 50% 50%
     +reset-box-model
     +hide-text
     border: none
